--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ I've been playing guitar since I was 8 years old and I play piano.
 </li>
 <li>
 <a href="https://www.instagram.com" title="">
-	<img alt="texte" src="Images/Image1.png" width="120" height="120" /> 
+	<img alt="texte" src="Images/Image1.jpg" width="120" height="120" /> 
     </a>
 </li>
 <li>
